--- a/inventory/group_vars/windows.yaml
+++ b/inventory/group_vars/windows.yaml
@@ -9,9 +9,15 @@ ansible_winrm_server_cert_validation: ignore
 
 ## certbot installation configurations
 certbot_server_url: https://acme-staging-v02.api.letsencrypt.org/directory
-certbot_work_dir: .\work
-certbot_logs_dir: .\log
-certbot_config_dir: .\config
+
+working_dir_base: C:\keychest
+certbot_work_dir: "{{working_dir_base}}\\work"
+certbot_logs_dir: "{{working_dir_base}}\\log"
+certbot_config_dir: "{{working_dir_base}}\\config"
 
 ## certbot installation controlling
 force_isntall: false
+
+## certification config
+
+default_zone: bestion.zone
