--- a/ansible.cfg
+++ b/ansible.cfg
@@ -167,7 +167,7 @@
 ;log_filter=
 
 # (path) File to which Ansible will log on the controller. When empty logging is disabled.
-;log_path=
+log_path=./ansible.log
 
 # (pathspec) Colon separated paths in which Ansible will search for Lookup Plugins.
 ;lookup_plugins={{ ANSIBLE_HOME ~ "/plugins/lookup:/usr/share/ansible/plugins/lookup" }}
